tests/neg-custom-args/captures/i21442.check
-- Error: tests/neg-custom-args/captures/i21442.scala:10:13 ------------------------------------------------------------
10 |  val io = x.unbox // error: local reach capability {x*} leaks
   |           ^^^^^^^
   |           Local reach capability x* leaks into capture scope of method foo.
   |           To allow this, the parameter x should be declared with a @use annotation
-- Error: tests/neg-custom-args/captures/i21442.scala:17:10 ------------------------------------------------------------
17 |  val x1: Boxed[IO^] = x // error
   |          ^^^^^^^^^^
   |          Separation failure: value x1's type Boxed[box IO^] hides parameter x.
   |          The parameter needs to be annotated with @consume to allow this.
